tests/snapshots/tiebreak__tiebreak_length@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"aaba\", \"b\", \"c\", \"aba\", \"ac\"]\noptions: --tiebreak=length,score"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aaba                                                                          "
"  aba                                                                           "
"  ac                                                                            "
"  c                                                                             "
"> b                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
