tests/snapshots/tiebreak__tiebreak_length@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"aaba\", \"b\", \"c\", \"aba\", \"ac\"]\noptions: --tiebreak=length,score\nafter:\n  @type \"ba\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aaba                                                                          "
"> aba                                                                           "
"  2/5                                                                        0/0"
"> ba                                                                            "
cursor: (24, 5)
