tests/snapshots/tiebreak__tiebreak_neg_begin.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  aaba                                                                          "
"  c                                                                             "
"  b                                                                             "
"> aba                                                                           "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (2, 23)
