tests/snapshots/tiebreak__tiebreak_neg_begin@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"aba\", \"b\", \"c\", \"aaba\", \"ac\"]\noptions: --tiebreak=-begin,score\nafter:\n  @char 'b'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"  aba                                                                           "
"> aaba                                                                          "
"  3/5                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
