tests/snapshots/tiebreak__tiebreak_neg_end-2.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aba                                                                           "
"> aaba                                                                          "
"  2/5                                                                        0/0"
"> ba                                                                            "
cursor: (24, 5)
