tests/snapshots/tiebreak__tiebreak_neg_end.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  aaba                                                                          "
"  c                                                                             "
"  b                                                                             "
"> aba                                                                           "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
