tests/snapshots/tiebreak__tiebreak_neg_end@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"aba\", \"b\", \"c\", \"aaba\", \"ac\"]\noptions: --tiebreak=-end,score"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  aaba                                                                          "
"  c                                                                             "
"  b                                                                             "
"> aba                                                                           "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
