tests/snapshots/tiebreak__tiebreak_neg_end@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"aba\", \"b\", \"c\", \"aaba\", \"ac\"]\noptions: --tiebreak=-end,score\nafter:\n  @type \"ba\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aba                                                                           "
"> aaba                                                                          "
"  2/5                                                                        0/0"
"> ba                                                                            "
cursor: (24, 5)
