tests/snapshots/tiebreak__tiebreak_neg_index.snap
---
source: tests/tiebreak.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a                                                                             "
"  b                                                                             "
"  c                                                                             "
"  ab                                                                            "
"> ac                                                                            "
"  5/5                                                                        0/0"
">                                                                               "
