tests/snapshots/tiebreak__tiebreak_neg_index@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"a\", \"b\", \"c\", \"ab\", \"ac\"]\noptions: --tiebreak=-index,score"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a                                                                             "
"  b                                                                             "
"  c                                                                             "
"  ab                                                                            "
"> ac                                                                            "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
